manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-delete-tasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delete-tasks
  template:
    metadata:
      labels:
        app: delete-tasks
    spec:
      containers:
      - name: delete-tasks
        image: devopsinsiders/delete-task
        resources:
        ports:
        - containerPort: 8000
