manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-delete-tasks-service
spec:
  type: ClusterIP
  selector:
    app: delete-tasks
  ports:
  - port: 80
    targetPort: 8000
